Updated Makefile and skiplist-ver.h
skiplist-ver.h: TOP now refers to MAX_H

--- a/c-cpp/src/skiplists/versioned/Makefile
+++ b/c-cpp/src/skiplists/versioned/Makefile
@@ -2,7 +2,7 @@ ROOT = ../../..
 
 include $(ROOT)/common/Makefile.common
 
-BINS = $(BINDIR)/$(LOCK)-skiplist
+BINS = $(BINDIR)/versioned-skiplist
 
 CFLAGS +=  -std=gnu11 # -Wall -pedantic
 #LDFLAGS += -ltcmalloc
