Compile Optimistic with gcc-4.9
Need to alter code slightly to compile with gcc-4.9
Changes some functions to extern

--- a/c-cpp/src/skiplists/skiplist-lock/Makefile
+++ b/c-cpp/src/skiplists/skiplist-lock/Makefile
@@ -3,7 +3,7 @@ ROOT = ../../..
 include $(ROOT)/common/Makefile.common
 
 BINS = $(BINDIR)/$(LOCK)-skiplist
-
+CC=gcc-4.9
 .PHONY:	all clean
 
 all:	main
