Update types of version locks (vlock_t)
Fix all bugs when using -pedantic flag.

height_ver and level_version vars always type vlock_t

--- a/c-cpp/src/skiplists/versioned/Makefile
+++ b/c-cpp/src/skiplists/versioned/Makefile
@@ -4,7 +4,7 @@ include $(ROOT)/common/Makefile.common
 
 BINS = $(BINDIR)/versioned-skiplist
 
-CFLAGS +=  -std=gnu11 # -Wall -pedantic
+CFLAGS +=  -std=gnu11 -Wall -pedantic
 #LDFLAGS += -ltcmalloc
 
 CC = gcc
