Update to version running on servers
Update Makefiles in commit rather than just always on the go.

--- a/c-cpp/src/skiplists/versioned/Makefile
+++ b/c-cpp/src/skiplists/versioned/Makefile
@@ -5,9 +5,9 @@ include $(ROOT)/common/Makefile.common
 BINS = $(BINDIR)/versioned-skiplist
 
 CFLAGS +=  -std=gnu11 -Wall -pedantic
-#LDFLAGS += -ltcmalloc
+LDFLAGS += -ltcmalloc
 
-CC = gcc
+CC = gcc-4.9
 
 .PHONY:	all clean
 
