--- a/c-cpp/src/skiplists/versioned/Makefile
+++ b/c-cpp/src/skiplists/versioned/Makefile
@@ -5,7 +5,7 @@ include $(ROOT)/common/Makefile.common
 BINS = $(BINDIR)/versioned-skiplist
 
 CFLAGS +=  -std=gnu11 -Wall -pedantic
-LDFLAGS += -ltcmalloc
+# LDFLAGS += -ltcmalloc
 
 CC = gcc-4.9
 
